[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UI/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://src/UI/FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Fonts/DroidSans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Fonts/DroidSans-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 3 )

[node name="GameOverScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
margin_left = 117.0
margin_top = 38.0
margin_right = 203.0
margin_bottom = 142.0
custom_constants/separation = 15

[node name="GameOverTitle" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
modulate = Color( 0.219608, 1, 0, 1 )
margin_right = 86.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "You Win!"

[node name="Restart" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 86.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Restart"
flat = true

[node name="Quit" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 86.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true

[node name="FadeIn" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
